--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -52,28 +52,28 @@ import '../styles/pages/about.css';
                             <img src="/images/Board_1.png" alt="Board Chair">
                             <h3 class="board-member-name">Merel van Buren</h3>
                             <p class="board-member-role">Chair</p>
-                            <p class="board-member-email"><a href="mailto:Voorzitter@tskvspartacus.nl">Voorzitter@tskvspartacus.nl</a></p>
+                            <p class="board-member-email"><a href="mailto:Chair@tskvspartacus.nl">Chair@tskvspartacus.nl</a></p>
                         </div>
                         
                         <div class="board-member">
                             <img src="/images/Board_2.png" alt="Board Secretary">
                             <h3 class="board-member-name">Jelle Smitss</h3>
                             <p class="board-member-role">Vice Chair</p>
-                            <p class="board-member-email"><a href="mailto:Vicevoorzitter@tskvspartacus.nl">Vicevoorzitter@tskvspartacus.nl</a></p>
+                            <p class="board-member-email"><a href="mailto:Vice@tskvspartacus.nl">Vice@tskvspartacus.nl</a></p>
                         </div>
                         
                         <div class="board-member">
                             <img src="/images/Board_3.png" alt="Board Treasurer">
                             <h3 class="board-member-name">Herman Skledar</h3>
                             <p class="board-member-role">Treasurer</p>
-                            <p class="board-member-email"><a href="mailto:Penningmeester@tskvspartacus.nl">Penningmeester@tskvspartacus.nl</a></p>
+                            <p class="board-member-email"><a href="mailto:Treasurer@tskvspartacus.nl">Treasurer@tskvspartacus.nl</a></p>
                         </div>
                         
                         <div class="board-member">
                             <img src="/images/Board_4.png" alt="Internal Affairs">
                             <h3 class="board-member-name">Sam Aras</h3>
                             <p class="board-member-role">Secretary</p>
-                            <p class="board-member-email"><a href="mailto:Secretaris@tskvspartacus.nl">Secretaris@tskvspartacus.nl</a></p>
+                            <p class="board-member-email"><a href="mailto:Secretary@tskvspartacus.nl">Secretary@tskvspartacus.nl</a></p>
                         </div>
                     </div>
                 </section>
