--- a/src/pages/committee.astro
+++ b/src/pages/committee.astro
@@ -29,40 +29,8 @@ import '../styles/pages/committee.css';
 
     <!-- Main Content -->
         <main>
-            <!-- Board Section -->
-            <section class="section board-section">
-                <h2 class="section-title">BOARD OF DIRECTORS</h2>
-                <p>T.S.K.V. Spartacus is entirely student-led, with a dedicated board and volunteers who work tirelessly to create the best experience for our members.</p>
-                
-                <div class="board-members">
-                    <div class="board-member">
-                        <img src="placeholder-board1.jpg" alt="Board Chair">
-                        <h3 class="board-member-name">Merel van Buren</h3>
-                        <p class="board-member-role">Chair</p>
-                        <p class="board-member-email"><a href="mailto:Voorzitter@tskvspartacus.nl">Voorzitter@tskvspartacus.nl</a></p>
-                    </div>
-                    
-                    <div class="board-member">
-                        <img src="placeholder-board2.jpg" alt="Board Secretary">
-                        <h3 class="board-member-name">Jelle Smitss</h3>
-                        <p class="board-member-role">Vice Chair</p>
-                        <p class="board-member-email"><a href="mailto:Vicevoorzitter@tskvspartacus.nl">Vicevoorzitter@tskvspartacus.nl</a></p>
-                    </div>
-                    
-                    <div class="board-member">
-                        <img src="placeholder-board3.jpg" alt="Board Treasurer">
-                        <h3 class="board-member-name">Herman Skledar</h3>
-                        <p class="board-member-role">Treasurer</p>
-                        <p class="board-member-email"><a href="mailto:Penningmeester@tskvspartacus.nl">Penningmeester@tskvspartacus.nl</a></p>
-                    </div>
-                    <div class="board-member">
-                        <img src="placeholder-board4.jpg" alt="Internal Affairs">
-                        <h3 class="board-member-name">Sam Aras</h3>
-                        <p class="board-member-role">Secretary</p>
-                        <p class="board-member-email"><a href="mailto:Secretaris@tskvspartacus.nl">Secretaris@tskvspartacus.nl</a></p>
-                    </div>
-                </div>
-            </section>
+                <!-- Board Section -->
+                <BoardOfDirectors />
 
             <!-- Committees Section -->
             <section class="section">
