--- a/src/pages/committee.astro
+++ b/src/pages/committee.astro
@@ -5,6 +5,7 @@ import Footer from '../components/Footer.astro';
 import ContactForm from '../components/ContactForm.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 import '../styles/pages/committee.css';
+import BoardOfDirectors from '../components/BoardOfDirectors.astro';
 ---
 
 <!DOCTYPE html>
