--- a/src/components/BoardOfDirectors.astro
+++ b/src/components/BoardOfDirectors.astro
@@ -25,25 +25,25 @@ const {
     {
       name: "Merel van Buren",
       role: "Chair",
-      email: "Voorzitter@tskvspartacus.nl",
+      email: "Chair@tskvspartacus.nl",
       image: "/images/Board_1.png"
     },
     {
       name: "Jelle Smitss",
       role: "Vice Chair",
-      email: "Vicevoorzitter@tskvspartacus.nl",
+      email: "Vice@tskvspartacus.nl",
       image: "/images/Board_2.png"
     },
     {
       name: "Herman Skledar",
       role: "Treasurer",
-      email: "Penningmeester@tskvspartacus.nl",
+      email: "Treasurer@tskvspartacus.nl",
       image: "/images/Board_3.png"
     },
     {
       name: "Sam Aras",
       role: "Secretary",
-      email: "Secretaris@tskvspartacus.nl",
+      email: "Secretary@tskvspartacus.nl",
       image: "/images/Board_4.png"
     }
   ]
